--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.imitatewechat">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ImitateWeChat">
+        android:theme="@style/Theme.ImitateWeChat"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <!-- 网络连接配置文件-->
+
+
         <activity
             android:name=".LoadingActivity"
             android:exported="true"
@@ -45,5 +50,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
